--- a/murillo.css
+++ b/murillo.css
@@ -2,5 +2,5 @@ body{text-align: center;}
 
 h1{color: burlywood;}
 h2{color: burlywood;}             
-.neymar{color:aqua}
+.neymar{color:black}
 .athletico {color:black}
