--- a/murillo.css
+++ b/murillo.css
@@ -5,4 +5,4 @@ h2{color: burlywood;}
 .neymar{color:black}
 .athletico {color:black}
 .murillo {widht: 30%;}
-.imagemcentralizada {text-align;}
+.imagemcentralizada {text-align: center;}
